--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,11 +1,20 @@
+# encoding: utf-8
+# -*- mode: ruby -*-
+# vi: set ft=ruby :
+
+require 'yaml'
+
 # Vagrant Config
 
-VM_BOX = "centos/8"  #"generic/centos8" # "centos/stream8" #"centos/8" 
-VM_BOX_VERSION = "20210210.0"
+options = YAML.load_file('config.yml')
+# puts "Config: #{options.inspect}\n\n"
+
+VM_BOX = "generic/debian11"      # Debian 11
+# VM_BOX_VERSION = "4.2.8"
 VM_PROVIDER = "virtualbox"
 VM_NETWORK = "private_network"
 VM_CPUS = "1"
-VM_MEMORY = "512"
+VM_MEMORY = "1024"
 
 # Machines Config
 
@@ -21,47 +30,62 @@ SERVER_WORKER_IP = "192.168.56.111"
 # K3S_VERSION = 'v1.21.10+k3s1'
 
 Vagrant.configure("2") do |config|
-  config.vm.box = VM_BOX
-  # config.vm.box_version = VM_BOX_VERSION
+  # Box configs
+  config.vm.box = options.fetch('vagrantbox')
 
-	config.vm.synced_folder ".", "/shared", type: 'virtualbox'
-  config.vbguest.installer_options = { allow_kernel_upgrade: true }
 
-  config.vm.provider VM_PROVIDER do |vb|
-    vb.cpus = VM_CPUS
-    vb.memory = VM_MEMORY
+  # config.ssh.username = 'root'
+  # config.ssh.password = 'vagrant'
+  # config.ssh.insert_key = 'true'
+
+  # Shared provider configs
+  config.vm.provider options.fetch('provider') do |vb|
+    vb.cpus = options.fetch('server').fetch('cpu')
+    vb.memory = options.fetch('server').fetch('ram')
   end
 
-  # config.vm.provision "shell", path: "scripts/firewalld-disable.sh"
-  config.vm.provision "file", source: "./auth/id_rsa.pub", destination: "/shared/id_rsa.pub"
-  config.vm.provision "file", source: "./auth/id_rsa", destination: "/shared/id_rsa"
-  config.vm.provision "shell", path: "provision-base.sh"
-  # config.vm.provision 'centos8-repos-point2vault', type: 'shell', run: 'once' do |sh|
-  #   sh.env = { :PATH => '/usr/local/bin:/usr/local/sbin:/sbin:/bin:/usr/sbin:/usr/bin:/root/bin' }
-  #   sh.inline = <<~'SHELL'
-  #     #!/bin/sh
-  #     find /etc/yum.repos.d -type f -name '*.repo' -exec \
-  #       sed -i -e '/mirrorlist.*/d' -e 's%#baseurl=http://mirror.centos.org%baseurl=http://vault.centos.org%g' {} \;
-  #   SHELL
-  end
+  # # Shared provision
+  # config.vm.provision "file", source: "./auth/id_rsa.pub", destination: "/home/vagrant/id_rsa.pub"
+  # config.vm.provision "file", source: "./auth/id_rsa", destination: "/home/vagrant/id_rsa"
+  # config.vm.provision "file", source: "./scripts/", destination: "/home/vagrant/"
+  # config.vm.provision "shell", privileged: true,  path: "scripts/provision-base.sh"
 
-  config.vm.define SERVER_NAME do |s|
-    s.vm.hostname = SERVER_NAME
-    s.vm.network VM_NETWORK, ip: SERVER_IP
-    s.vm.provider VM_PROVIDER do |vmp|
-      vmp.name = SERVER_NAME
+  # Server
+  config.vm.define options.fetch('server').fetch('hostname') do |server|
+    server.vm.hostname = options.fetch('server').fetch('hostname')
+    server.vm.network options.fetch('server').fetch('network'), ip: options.fetch('server').fetch('ip')
+    
+    # Provider configs
+    server.vm.provider options.fetch('provider') do |vmp|
+      vmp.name = options.fetch('server').fetch('hostname')
     end
 
-    s.vm.provision "up", type: "shell", path: "provision-server.sh"
+    server.vm.provision "shell", path: "scripts/provision-server.sh"
+    # # Triggers
+    # server.trigger.after :up do |trigger|
+    #   trigger.name = "k3s"
+    #   trigger.info = "start k3s server"
+    #   trigger.run_remote = {
+    #     inline: "sh /home/vagrant/scripts/provision-server.sh"
+    #   }
+    # end
   end
 
-  config.vm.define SERVER_WORKER_NAME do |sw|
-    sw.vm.hostname = SERVER_WORKER_NAME
-    sw.vm.network VM_NETWORK, ip: SERVER_WORKER_IP
-    sw.vm.provider VM_PROVIDER do |vmp|
-      vmp.name = SERVER_WORKER_NAME
+  config.vm.define SERVER_WORKER_NAME do |worker|
+    worker.vm.hostname = SERVER_WORKER_NAME
+    worker.vm.network VM_NETWORK, ip: SERVER_WORKER_IP
+    worker.vm.provider VM_PROVIDER do |provider|
+      provider.name = SERVER_WORKER_NAME
     end
 
-    sw.vm.provision "up", type: "shell", path: "provision-server-worker.sh"
+    worker.vm.provision "shell", path: "scripts/provision-server-worker.sh", args: TOKEN
+    # Triggers
+    # worker.trigger.after :up do |trigger|
+    #   trigger.name = "k3s"
+    #   trigger.info = "start k3s worker"
+    #   trigger.run_remote = {
+    #     inline: "sh /home/vagrant/scripts/provision-server-worker.sh"
+    #   }
+    # end
   end
 end
