--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -4,88 +4,40 @@
 
 require 'yaml'
 
-# Vagrant Config
-
 options = YAML.load_file('config.yml')
-# puts "Config: #{options.inspect}\n\n"
-
-VM_BOX = "generic/debian11"      # Debian 11
-# VM_BOX_VERSION = "4.2.8"
-VM_PROVIDER = "virtualbox"
-VM_NETWORK = "private_network"
-VM_CPUS = "1"
-VM_MEMORY = "1024"
-
-# Machines Config
-
-SERVER_NAME = "dzondaS"
-SERVER_IP = "192.168.56.110"
-
-SERVER_WORKER_NAME = "dzondaSW"
-SERVER_WORKER_IP = "192.168.56.111"
-
-# K3S Config
-
-# K3S_CHANNEL = 'latest'
-# K3S_VERSION = 'v1.21.10+k3s1'
 
 Vagrant.configure("2") do |config|
-  # Box configs
   config.vm.box = options.fetch('vagrantbox')
 
-
-  # config.ssh.username = 'root'
-  # config.ssh.password = 'vagrant'
-  # config.ssh.insert_key = 'true'
-
-  # Shared provider configs
   config.vm.provider options.fetch('provider') do |vb|
-    vb.cpus = options.fetch('server').fetch('cpu')
-    vb.memory = options.fetch('server').fetch('ram')
+    vb.cpus = options.fetch('shared').fetch('cpu')
+    vb.memory = options.fetch('shared').fetch('ram')
   end
 
-  # # Shared provision
-  # config.vm.provision "file", source: "./auth/id_rsa.pub", destination: "/home/vagrant/id_rsa.pub"
-  # config.vm.provision "file", source: "./auth/id_rsa", destination: "/home/vagrant/id_rsa"
-  # config.vm.provision "file", source: "./scripts/", destination: "/home/vagrant/"
-  # config.vm.provision "shell", privileged: true,  path: "scripts/provision-base.sh"
+  config.vm.provision "file", source: "./auth", destination: "/home/vagrant/auth"
+  config.vm.provision "shell", path: "scripts/provision-base.sh"
 
   # Server
   config.vm.define options.fetch('server').fetch('hostname') do |server|
     server.vm.hostname = options.fetch('server').fetch('hostname')
     server.vm.network options.fetch('server').fetch('network'), ip: options.fetch('server').fetch('ip')
     
-    # Provider configs
-    server.vm.provider options.fetch('provider') do |vmp|
-      vmp.name = options.fetch('server').fetch('hostname')
+    server.vm.provider options.fetch('provider') do |provider|
+      provider.name = options.fetch('server').fetch('hostname')
     end
 
     server.vm.provision "shell", path: "scripts/provision-server.sh"
-    # # Triggers
-    # server.trigger.after :up do |trigger|
-    #   trigger.name = "k3s"
-    #   trigger.info = "start k3s server"
-    #   trigger.run_remote = {
-    #     inline: "sh /home/vagrant/scripts/provision-server.sh"
-    #   }
-    # end
   end
 
-  config.vm.define SERVER_WORKER_NAME do |worker|
-    worker.vm.hostname = SERVER_WORKER_NAME
-    worker.vm.network VM_NETWORK, ip: SERVER_WORKER_IP
-    worker.vm.provider VM_PROVIDER do |provider|
-      provider.name = SERVER_WORKER_NAME
+  # Worker
+  config.vm.define options.fetch('agent').fetch('hostname') do |worker|
+    worker.vm.hostname = options.fetch('agent').fetch('hostname')
+    worker.vm.network options.fetch('agent').fetch('network'), ip: options.fetch('agent').fetch('ip')
+    
+    worker.vm.provider options.fetch('provider') do |provider|
+      provider.name = options.fetch('agent').fetch('hostname')
     end
 
-    worker.vm.provision "shell", path: "scripts/provision-server-worker.sh", args: TOKEN
-    # Triggers
-    # worker.trigger.after :up do |trigger|
-    #   trigger.name = "k3s"
-    #   trigger.info = "start k3s worker"
-    #   trigger.run_remote = {
-    #     inline: "sh /home/vagrant/scripts/provision-server-worker.sh"
-    #   }
-    # end
+    worker.vm.provision "shell", path: "scripts/provision-worker.sh"
   end
 end
