--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -6,7 +6,7 @@ require 'yaml'
 
 options = YAML.load_file('config.yml')
 
-Vagrant.configure("2") do |config|
+Vagrant.configure("2") do |config|#Version 2 de vagrant
   config.vm.box = options.fetch('vagrantbox')
 
   config.vm.provider options.fetch('provider') do |vb|
@@ -33,6 +33,7 @@ Vagrant.configure("2") do |config|
   config.vm.define options.fetch('agent').fetch('hostname') do |worker|
     worker.vm.hostname = options.fetch('agent').fetch('hostname')
     worker.vm.network options.fetch('agent').fetch('network'), ip: options.fetch('agent').fetch('ip')
+    #config.vm.network "private_network", ip: "192.168.42.110"
     
     worker.vm.provider options.fetch('provider') do |provider|
       provider.name = options.fetch('agent').fetch('hostname')
