--- a/p2/manifests/app1/configmap.yml
+++ b/p2/manifests/app1/configmap.yml
@@ -1,6 +1,46 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: app1-config
+  name: app1
 data:
-  html-file-path: /home/vagrant/app/index.html
+  index.html: |-
+    $(cat ${HTML_FILE_PATH})
+
+apiVersion: v2
+name: hello-kubernetes
+description: A demo application for a Kubernetes cluster.
+type: application
+version: 1.0.0
+appVersion: "1.10"
+# Provide a custom message
+message: ""
+
+# Remember to set service.type=ClusterIP if you are using an ingress
+ingress:
+  configured: false
+  rewritePath: true
+  pathPrefix: ""
+
+service:
+  type: LoadBalancer
+  port: 80
+
+deployment:
+  replicaCount: 2
+  container:
+    image:
+      repository: "paulbouwer/hello-kubernetes"
+      tag: "" # uses chart appVersion if not provided
+      pullPolicy: IfNotPresent
+    port: 8080
+
+  # Currently only linux images on amd64 architecture are supported - support for arm64 and windows/amd64 coming ...
+  nodeSelector:
+    kubernetes.io/os: linux
+    kubernetes.io/arch: amd64
+
+  resources: {}
+
+  tolerations: []
+
+  affinity: {}
