--- a/p2/manifests/app1/deployment.yml
+++ b/p2/manifests/app1/deployment.yml
@@ -3,31 +3,24 @@ kind: Deployment
 metadata:
   name: app1
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app: app1
+  replicas: 1
   template:
     metadata:
       labels:
         app: app1
     spec:
       containers:
-      - name: app1
-        image: nginx:alpine
+      - name: nginx
+        image: nginx
         ports:
         - containerPort: 80
         volumeMounts:
-        - name: html-content
+        - name: app1-volume
           mountPath: /usr/share/nginx/html
-          subPath: $(HTML_FILE_PATH)
-      env:
-      - name: HTML_FILE_PATH
-        valueFrom:
-          configMapKeyRef:
-            name: app1-config
-            key: html-file-path
       volumes:
-      - name: html-content
-        hostPath:
-          path: /home/vagrant/app/index.html
+      - name: app1-volume
+        configMap:
+          name: app1
