--- a/p2/manifests/app1/service.yml
+++ b/p2/manifests/app1/service.yml
@@ -1,13 +1,17 @@
-apiVersion: v1
-kind: Service
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
   name: app1-svc
+  annotations:
+    kubernetes.io/ingress.class: "traefik"
 spec:
-  selector:
-    app: app1
-  ports:
-    - name: http
-      protocol: TCP
-      port: 80
-      targetPort: 80
-  type: ClusterIP
+  rules:
+  - http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: app1
+            port:
+              number: 80
