--- a/p1/config.yml
+++ b/p1/config.yml
@@ -1,18 +1,42 @@
-vagrantbox: generic/alpine317
-provider: virtualbox
-shared:
-  network: 192.168.56.
-  cpu: 1
-  ram: 1024
-server:
-  hostname: dzondaS
-  network: private_network
-  ip: 192.168.56.110
-  cpu: 2
-  ram: 1024
-agent:
-  hostname: dzondaSW 
-  network: private_network
-  ip: 192.168.56.111
-  cpu: 2
-  ram: 1024
+default:
+  vagrantbox: generic/alpine317
+  provider: virtualbox
+  provision:
+    auth:
+      src: "auth"
+      out: "/home/vagrant/auth"
+machines:
+  server:
+    provider: virtualbox
+    hostname: dzondaS
+    network: private_network
+    ip: 192.168.42.110
+    cpu: 2
+    ram: 1024
+    provision:
+      files:
+        auth:
+          src: "auth"
+          out: "/home/vagrant/auth"
+      shell:
+        base:
+          path: "./scripts/provision-base.sh"
+        server:
+          path: "./scripts/provision-server.sh"
+  worker:
+    provider: virtualbox
+    hostname: dzondaSW 
+    network: private_network
+    ip: 192.168.42.111
+    cpu: 2
+    ram: 1024
+    provision:
+      files:
+        auth:
+          src: "auth"
+          out: "/home/vagrant/auth"
+      shell:
+        base:
+          path: "./scripts/provision-base.sh"
+        server:
+          path: "./scripts/provision-worker.sh"
