--- a/p2/k3s_cluster/ingress.yml
+++ b/p2/k3s_cluster/ingress.yml
@@ -1,16 +1,16 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: app1-ingress
+  name: name-virtual-host-ingress
 spec:
   rules:
   - host: app1.com
     http:
       paths:
-      - path: /
-        pathType: Prefix
+      - pathType: Prefix
+        path: /
         backend:
           service:
-            name: app1-svc
+            name: app1
             port:
-              name: http
+              number: 8080
