--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -33,3 +33,38 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", path: provision.fetch("shell")
 
 end
+
+# encoding: utf-8
+# -*- mode: ruby -*-
+# vi: set ft=ruby :
+
+require 'yaml'
+
+options = YAML.load_file('config.yml')
+
+Vagrant.configure("2") do |config|
+  default = options.fetch('default')
+
+  options.fetch('machines').each do |name, machine|
+    config.vm.define "#{name}" do |instance|
+      instance.vm.box = machine.fetch('vagrantbox')
+      instance.vm.network machine.fetch('network'), ip: machine.fetch('ip')
+      instance.vm.hostname = machine.fetch('hostname')
+
+      instance.vm.provider machine.fetch('provider') do |provider|
+        provider.name = machine.fetch('hostname')
+        provider.cpus = machine.fetch('cpu')
+        provider.memory = machine.fetch('ram')
+        provider.gui = false
+      end
+
+      machine.fetch('provision').fetch('files').each do |_, file|
+        instance.vm.provision "file", source: "#{file['src']}", destination: "#{file['out']}"
+      end
+
+      machine.fetch('provision').fetch('shell').each do |_, script|
+        instance.vm.provision "shell", path: "#{script['path']}"
+      end
+    end
+  end
+end
