--- a/p1/config.yml
+++ b/p1/config.yml
@@ -1,18 +1,41 @@
-vagrantbox: generic/alpine317
-provider: virtualbox
-shared:
-  #network: 192.168.56.
-  cpu: 1
-  ram: 1024
-server:
-  hostname: dzondaS
-  network: private_network
-  ip: 192.168.42.110
-  #cpu: 2
-  #ram: 1024
-agent:
-  hostname: dzondaSW 
-  network: private_network
-  ip: 192.168.42.111
-  #cpu: 2
-  #ram: 1024
+machines:
+  server:
+    vagrantbox: generic/alpine317
+    provider: virtualbox
+    hostname: dzondaS
+    network: private_network
+    bridge: eth1
+    ip: 192.168.42.110
+    cpu: 2
+    ram: 1024
+    gui: false
+    provision:
+      files:
+        ssh:
+          src: "ssh"
+          out: "/ssh/vagrant/ssh"
+      shell:
+        base:
+          path: "./scripts/provision-base.sh"
+        server:
+          path: "./scripts/provision-server.sh"
+  worker:
+    vagrantbox: generic/alpine317
+    provider: virtualbox
+    hostname: dzondaSW 
+    network: private_network
+    bridge: eth1
+    ip: 192.168.42.111
+    cpu: 2
+    ram: 1024
+    gui: false
+    provision:
+      files:
+        ssh:
+          src: "ssh"
+          out: "/home/vagrant/ssh"
+      shell:
+        base:
+          path: "./scripts/provision-base.sh"
+        server:
+          path: "./scripts/provision-worker.sh"
