--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -9,6 +9,7 @@ Vagrant.configure("2") do |config|
   base = vm.fetch("base")
   network = vm.fetch("network")
   provision = vm.fetch("provision")
+
   # Setup base of the vm
   config.vm.define base.fetch("hostname")
   config.vm.box = base.fetch("version")
@@ -19,16 +20,11 @@ Vagrant.configure("2") do |config|
     vm_virtualbox.memory = base.fetch("ram")
     vm_virtualbox.cpus = base.fetch("cpu")
   end
+
   # Network
-  config.vm.network "private_network", ip: network.fetch("ip")
-  config.vm.network "forwarded_port", guest: network.fetch("port_guest"), host: network.fetch("port_host")
-  #config.vm.network "public_network", bridge:"en0: Wi-fi (Airport)", ip: network.fetch("ip")
-  # ssh
-  config.ssh.keys_only = true
-  config.ssh.insert_key = true
-  config.ssh.keys_only = true
+  config.vm.network "private_network", bridge: machine.fetch('bridge'), ip: network.fetch("ip")
+
   # Setup
-  #config.vm.synced_folder "k3s_cluster/", "/home/vagrant/k3s_cluster", type: "rsync"
   config.vm.provision "file", source: "k3s_cluster", destination: "/home/vagrant/k3s_cluster"
   config.vm.provision "shell", path: provision.fetch("shell")
 
