--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -4,7 +4,7 @@
 
 require 'yaml'
 
-config = YAML.load_file(File.join(File.dirname(__FILE__), 'config.yml'))
+config = YAML.load_file(File.join(File.dirname(__FILE__), 'confs/config.yml'))
 
 Vagrant.configure("2") do |vagrant|
   config.fetch('machines').each do |name, machine|
