--- a/p1/confs/config.yml
+++ b/p1/confs/config.yml
@@ -12,7 +12,7 @@ machines:
     provision:
       files:
         ssh:
-          src: "ssh"
+          src: "confs/ssh"
           out: "/home/vagrant/ssh"
         utils:
           src: "../utils/aliases.sh"
@@ -35,7 +35,7 @@ machines:
     provision:
       files:
         ssh:
-          src: "ssh"
+          src: "confs/ssh"
           out: "/home/vagrant/ssh"
         utils:
           src: "../utils/aliases.sh"
